crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__async-for.py_2.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func():
%%     async for i in range(10):
%%         if i == 5:
%%             return 1
%%     return 0

flowchart TD
  start(("Start"))
  return(("End"))
  block0["return 0\n"]
  block1["return 1\n"]
  block2["if i == 5:
            return 1\n"]
  block3["async for i in range(10):
        if i == 5:
            return 1\n"]

  start --> block3
  block3 -- "range(10)" --> block2
  block3 -- "else" --> block0
  block2 -- "i == 5" --> block1
  block2 -- "else" --> block3
  block1 --> return
  block0 --> return

